# discord-mirror

./: .env.example  .gitignore  Cargo.toml  README.md
src/: discord.rs  gateway.rs  main.rs  mirror.rs
