[package]
name = "discord-mirror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }

[dependencies.serenity]
default-features = false
git = "https://github.com/ovo/serenity"
features = [
    "builder",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
]
version = "0.10"
