[package]
name = "discord-mirror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
websocket = "0.26"
futures = "0.3"
rand = "0.8"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"